--- a/app/package.json
+++ b/app/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "DrivePass",
-  "version": "0.0.4",
-  "description": "Simple Google Drive password manager.",
+  "name": "bombe",
+  "version": "0.0.1",
+  "description": "Password management, simpler.",
   "main": "gulpfile.js",
   "scripts": {
-    "test": "gulp test"
+    "test": "gulp test",
+    "start": "gulp",
+    "build": "gulp build"
   },
-  "dependencies": {},
+  "dependencies": {
+    "gulp-mocha-phantomjs": "^0.12.2",
+    "gulp-sass": "^4.1.0"
+  },
   "devDependencies": {
     "browserify": "^9.0.8",
     "chai": "^3.5.0",
@@ -15,9 +20,7 @@
     "gulp-concat": "^2.5.2",
     "gulp-jshint": "^2.0.0",
     "gulp-minify-css": "^1.2.3",
-    "gulp-mocha-phantomjs": "^0.10.1",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.1.1",
     "gulp-sourcemaps": "^1.5.1",
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.4",
