--- a/app/bower.json
+++ b/app/bower.json
@@ -2,7 +2,7 @@
   "name": "minicrm",
   "version": "0.0.1",
   "authors": [
-    "Mike Roth <hi@michaelharrisonroth.com>"
+    "Mike Roth <mike@manyuses.com>"
   ],
   "license": "MIT",
   "ignore": [
