--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bombe",
+  "name": "gnokey",
   "version": "0.0.1",
   "description": "Password management, simpler.",
   "main": "gulpfile.js",
@@ -8,10 +8,7 @@
     "start": "gulp",
     "build": "gulp build"
   },
-  "dependencies": {
-    "gulp-mocha-phantomjs": "^0.12.2",
-    "gulp-sass": "^4.1.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "browserify": "^9.0.8",
     "chai": "^3.5.0",
@@ -24,6 +21,8 @@
     "gulp-sourcemaps": "^1.5.1",
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.4",
+    "gulp-mocha-phantomjs": "^0.12.2",
+    "gulp-sass": "^4.1.0",
     "jshint": "^2.9.1",
     "mocha": "^2.4.5",
     "vinyl-buffer": "^1.0.0",
