--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "build": "gulp build"
   },
   "dependencies": {
+    "js-cookie": "^2.2.1",
     "node-rsa": "^1.1.1"
   },
   "devDependencies": {
